Revision history for Perl extension Apache::FakeTable.

0.04
        - Fixed a pasto in the Support section.

0.03    2008-04-02T00:14:25
        - Updated pod.t to use newer version of Test::Pod.
        - Added the "configure_requires", "build_requires", and "recommends"
          parameters to Build.PL.
        - Fixed syntax error under Perl 5.10. Reported by IMACAT via
          cpan-testers.

0.02  Thu Sep  4 05:32:22 2003
        - Fixed behavior of each to match that of Apache::Table. It will now
          return multiple key/value pairs for a single key that has multiple
          values.
        - Changed behavior of new() to require an Apache object as its first
          object to bring it more in line with the behavior of
          Apache::Table::new.
        - Assigning a value of undef no longer deletes the key from the table,
          but goes ahead and assigns it. When warnings are enabled, this will
          cause Apache::FakeTable to issue a "Use of uninitialized value in
          null operation" warning.
        - The merge() method will now only merge the new value with the first
          value when a key has multiple existing values. It also now uses a
          comma and a space to separate the values, instead of just a comma.

0.01  Sun Aug 31 22:58:05 2003
        - Original version, poached from a patch for HTML::Mason.