@@ -2,6 +2,8 @@ Revision history for Perl extension Apache::FakeTable.
 
 0.04
         - Fixed a pasto in the Support section.
+        - Added Module::Build to the "build_requires" parameter in Build.PL to
+          eliminate a warning during `make dist`.
 
 0.03    2008-04-02T00:14:25
         - Updated pod.t to use newer version of Test::Pod.
